--- a/index.html
+++ b/index.html
@@ -6,27 +6,30 @@
 </head>
 	<body>
 		<!-- this div will be for the top part -->
-		<div>
-			<div class="logo"> 
-				<p>this is logo</p>
-			</div>
-			<div id="listBox">
-				<ul>
-					<li class="option">
-						<a href="index.html">Home</a>
-					</li>
-					<li class="option">
-						<a href="tool.html">Tool</a>
-					</li>
-					<li class="option">
-						<a href="saved.html">Saved Data</a>
-					</li>
-					
-					<li class="option">
-						<a href="login.html">Login</a>
-					</li>
-				</ul>
-			</div>
-		</div>
+		
+        <div class="logo"> 
+            <p>this is logo</p>
+        </div>
+        <div id="listBox">
+            <ul>
+                <li class="option">
+                    <a href="index.html">Home</a>
+                </li>
+                <li class="option">
+                    <a href="tool.html">Tool</a>
+                </li>
+                <li class="option">
+                    <a href="saved.html">Saved Data</a>
+                </li>
+                <li class="option">
+                    <a href="login.html">Login</a>
+                </li>
+            </ul>
+        </div>
+		<div id="contant">
+            <p>Hello Everyone,
+            This website is a project for CS401- Web Development, and it is a tool that help student to study better and more effective.
+            </p>
+        </div>
 	</body>
 </html>
